--- a/test.html
+++ b/test.html
@@ -112,11 +112,12 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
          margin: 5px;
       }
         .btnStats {
-          padding: 10px 18px;
+          padding: 10px;
           font-size: 22px;
-          line-height: normal;
+          line-height: 200%;
           border-radius: 8px;
           margin: 5px;
+
       }
 
         .rewards {
@@ -232,12 +233,12 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
 
 
 	  <div class="span3 actions">
-	    <div class="span12">
-	      <div class="statistics">
-		<div class="span10 offset1 actionsBtn">
+	    <div class="span12 statistics">
 
+		<div class="span12 actionsBtn">
+		  
 		  <!-- Button to trigger Modal -->
-		  <a href="#myModal1" role="button" class="btn btn-success btnStats" data-toggle="modal">Create a to-torial</a>
+		  <a href="#myModal1" role="button" class="btn btn-primary btn-block btnStats" data-toggle="modal">Create a to-torial</a>
 		  <!--Modal-->
 		  <div id="myModal1" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 		    <div class="modal-header">
@@ -351,9 +352,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
 		      </div>
 		    </div>
 		 </div>
-		 <div class="span10 offset1 actionsBtn">
+		  </div>
+		 <div class="span12 actionsBtn">
 		    <!-- Button to trigger modal -->
-		    <a href="#myModal2" role="button" class="btn btn-success btn-large" data-toggle="modal">Request a to-torial</a>
+		    <a href="#myModal2" role="button" class="btn btn-primary btn-block btnStats" data-toggle="modal">Request a to-torial</a>
 
 		    <!-- Modal -->
 		    <div id="myModal2" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel2" aria-hidden="true">
@@ -379,7 +381,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
 		 <div class="span10 offset1 actionsBtn">
 		   <p class="lead">Share it!</p>
 		   </div>
-		  <div class="span10 offset1 social">
+		  <div class="span12 social">
 
 		    <!-- AddThis Button BEGIN -->
 		    <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
@@ -397,68 +399,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
 
               </div>
 		</div>
-	      </div>
+
 
 	  </div>
 
-<!--	  <div class="span3 rewards">
-	    <div class="span12">
-	      <div class="prizes">
-		<div class="span10 offset1">
-		  <div class="linediv-l">
-		    <h4>Pledge $1 or more</h4>
-		    <p>We'll thank you by name on our website</p>  
-		    </div>
-		  </div>
-		<div class="span10 offset1">
-		  <div class="linediv-l">
-		    <h4>Pledge a Social Plug</h4>
-		    <p>We give you a personal shout-out on our social networks</p>
-		    </div>
-		  </div>
-		<div class="span10 offset1">
-		  <div class="linediv-l">
-		    <h4>Pledge a Sign-Up</h4>
-		    <p>Be one of the first 100 to sign up and you'll be invited to the first 1,000 User Party</p>
-		    </div>   
-		  </div>
-		<div class="span10 offset1">
-		  <div class="linediv-l">
-		    <h4> Pledge $5 or more</h4>
-		    <p> Reward</p>
-		    </div>
-		    </div>
-		<div class="span10 offset1">
-		  <div class="linediv-l">
-		    <h4>Pledge $10 or more</h4>
-		    <p>Reward xyz</p>
-		  </div>
-		  </div>
-		<div class="span10 offset1">
-		  <div class="linediv-l">
-		    <h4>Pledge $15 or more</h4>
-		    <p>Reward</p>
-		    </div>
-		  </div>
-		<div class="span10 offset1">
-		  <div class="linediv-l">
-		    <h4>Pledge $25 or more</h4>
-		    <p>A featured blog post on how wonderful you are</p>
-		    </div>
-		  </div>
-		<div class="span10 offset1">
-		  <div class="linediv-l">
-		    <h4>Pledge $50 or more</h4>
-		    <p>We'll make and mail you a personalized, handmade gift</p> 
-		    </div>
-		  </div>
-		<div class="span10 offset1">
-		  <div class="linediv-l">
-		    <h4>Pledge $100 or more</h4>
-		    <p>We'll name something on the site after you</p>
-		    </div>
-		  </div> -->
-		
 		</div>
 	      </div>
 	   </div> 
