--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Unpinned</title>
+    <title>Unpind</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='http://fonts.googleapis.com/css?family=Roboto|Oxygen' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
@@ -181,7 +181,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
       }
 
         .heading h1 {
-          color: #006e2e;
+          color: #202020;
           font-size: 50px;
       }
 
@@ -221,7 +221,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Unpinned</a>
+          <a class="brand" href="#">Unpind</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
@@ -254,12 +254,12 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
       <div class="container">
       <div class="row-fluid heading">
 	<div class="span12">
-	  <h1>Welcome to Unpinned!</h1>
+	  <h1>Welcome to unpind!</h1>
 	  </div>
 	</div>
 	<div class="row-fluid subheading">
 	  <div class="span12">
-	    <p class="lead"> The place to learn, do and share DIY projects through video chat.</p>
+	    <p class="lead"> Your place to learn, do and share DIY projects through video chat.</p>
 	    </div>
 	  </div>
 	</div>
@@ -271,13 +271,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
 	    <img class="img-polaroid" src="http://placehold.it/600x400">
 	    </div>
 
-<!--	   <div class="asset">
-            <img class="img-polaroid" src="http://placehold.it/600x200">
-	    </div>
 
-	    <div class="asset">
-	      <img class="img-polaroid" src="http://placehold.it/600x200">
-	      </div> -->
 	  </div>
 
 
