--- a/test.html
+++ b/test.html
@@ -65,17 +65,17 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
       }
 
       .navbar .nav .active > a, .navbar .nav .active > a:hover {
-         background-color: #006633;
+         background-color: #2a3720;
       }
       
       .navbar .nav > li > a {
-         color: #669966;
+         color: #7fa460;
          text-decoration: none;
          text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
       }
 
       .navbar-fixed-top .brand {
-        color: #F0F0F0;
+        color: #000000;
         text-decoration: none;
         text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
       }
@@ -221,7 +221,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Unpind</a>
+          <a class="brand" href="#"><img src="imag/unpind1.png"></a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
@@ -281,7 +281,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
 		<div class="span12 actionsBtn">
 		  
 		  <!-- Button to trigger Modal -->
-		  <a href="#myModal1" role="button" class="btn btn-primary btn-block btnStats btn-custom" data-toggle="modal">Create a to-torial</a>
+		  <a href="#myModal1" role="button" class="btn btn-primary btn-block btnStats" data-toggle="modal">Create a to-torial</a>
 		  <!--Modal-->
 		  <div id="myModal1" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 		    <div class="modal-header">
@@ -398,7 +398,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
 		  </div>
 		 <div class="span12 actionsBtn">
 		    <!-- Button to trigger modal -->
-		    <a href="#myModal2" role="button" class="btn btn-primary btn-block btnStats btn-custom-green" data-toggle="modal">Request a to-torial</a>
+		    <a href="#myModal2" role="button" class="btn btn-primary btn-block btnStats" data-toggle="modal">Request a to-torial</a>
 
 		    <!-- Modal -->
 		    <div id="myModal2" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel2" aria-hidden="true">
