--- a/test.html
+++ b/test.html
@@ -74,7 +74,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
          text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
       }
 
-      .navbar-fixed-top .brand {
+      .navbar-fixed-top {
         color: #000000;
         text-decoration: none;
         text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
@@ -168,6 +168,12 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
   -webkit-font-smoothing: antialiased;
 }
 
+      .brand
+      {
+        background:url(app0/unpindlogo.png) no-repeat left center;
+        height: 20px;
+        width: 100px;
+      }
 
         .rewards {
           background-color: #aaaaaa;
@@ -215,13 +221,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
   <body>
   <div class="navbar navbar-fixed-top">    
    <div class="navbar-inner">
-    <div class="container">
+    <div class="container-fluid">
          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#"><img src="imag/unpind1.png"></a>
+          <a class="brand" href="#"><img src="app0/unpindlogo.png"></a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
@@ -254,7 +260,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
       <div class="container">
       <div class="row-fluid heading">
 	<div class="span12">
-	  <h1>Welcome to unpind!</h1>
+	  <h1>Welcome to unpind!<img src="app0/unpindlogo.png"></h1>
 	  </div>
 	</div>
 	<div class="row-fluid subheading">
