--- a/test.html
+++ b/test.html
@@ -89,14 +89,22 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
       /* Main body and headings */
         body{
          font-family: 'Roboto', sans-serif;
-         background: url('checkeredbackground.png');
       }
+      .checker{
+        width: 1170px;
+        height: 400px;
+        position: relative;
+        background: url("http://i.imgur.com/omxb2jQ.png");
+      }
+      
       .heading, .subheading {
          font-family: 'Oxygen', sans-serif;
-          text-align: center;
+         text-align: center;
+         padding: 0px;
+         margin: 0px;
       }
       p.lead {
-         padding-top: 1.5%;
+         padding-top: 0px;
          font-size: 24px;
          line-height: 30px;
       }
@@ -170,9 +178,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
 
       .brand
       {
-        background:url(app0/unpindlogo.png) no-repeat left center;
+        background: url("http://i.imgur.com/Cp3T8fs.png") no-repeat center;
         height: 20px;
-        width: 100px;
+        width: 90px;
       }
 
         .rewards {
@@ -187,8 +195,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
       }
 
         .heading h1 {
-          color: #202020;
-          font-size: 50px;
+          color: #a9db80;
+          font-size: 66px;
       }
 
         .modalCreate p {
@@ -227,7 +235,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#"><img src="app0/unpindlogo.png"></a>
+          <a class="brand" href="#brand"></a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
@@ -260,7 +268,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', end
       <div class="container">
       <div class="row-fluid heading">
 	<div class="span12">
-	  <h1>Welcome to unpind!<img src="app0/unpindlogo.png"></h1>
+	  <h1>Welcome to <a href="http://imgur.com/xIGBU6v"><img src="http://i.imgur.com/xIGBU6v.png?1" title="Hosted by imgur.com" center center /></a></h1>
 	  </div>
 	</div>
 	<div class="row-fluid subheading">
