--- a/test.html
+++ b/test.html
@@ -464,7 +464,7 @@ padding:0;
 		      </div>
 
                     </div>
-		 <div class="span10 offset1 actionsBtn actionsPrompt">
+		 <div class="span12 actionsBtn actionsPrompt">
 		   <p class="lead">Share it!</p>
 		   </div>
 		  <div class="span12 social">
