correcting sizing in modals

--- a/test.html
+++ b/test.html
@@ -344,14 +344,14 @@ padding:0;
 		      <!-- Create Form  First -->
 			  <div class="row-fluid no-space">
 				    <div class="span12">
-				      <div class="span8 offset2">
-				      <input class="input-xlarge" type="text" placeholder="Title">
+				      <div class="span12">
+				      <input class="span8" type="text" placeholder="Title">
 				    </div>
 				    <div class="span12">
-				      <input class="input-xlarge" type="text" placeholder="Description">
+				      <input class="span8" type="text" placeholder="Description">
 				    </div>
 				    <div class="span12">
-				      <input class="input-xlarge" type="text" placeholder="Required Materials">
+				      <input class="span8" type="text" placeholder="Required Materials">
 				    </div>
 				  </div>
 				 </div>   
@@ -416,7 +416,7 @@ padding:0;
 
 		  <div class="row-fluid">
 		    <div class="span12">
-		    <p>Select a date and time for your to-torial.</p>
+		    Select a date and time for your to-torial.
 		    </div>
 		    <!-- AddThis Button BEGIN -->
 		    <div class="row-fluid">
@@ -458,10 +458,10 @@ padding:0;
 			</div>
 		      <div class="modal-body modalCreate">
 			<div class="span12"> 
-			<textarea rows=3 type="text" placeholder="Describe it for us..."></textarea>
+			<textarea rows=3 type="text" class="span8" placeholder="Describe it for us..."></textarea>
 			</div>
 			<div class="span12">
-			 <input class="input-xlarge" type="text" placeholder="Paste a link to the project">
+			 <input class="span8" type="text" placeholder="Paste a link to the project">
 			 </div>
 		      </div>
 		      <div class="modal-footer">
