--- a/test.html
+++ b/test.html
@@ -13,7 +13,53 @@
     <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Just+Another+Hand' rel='stylesheet' type='text/css'>
+
+    <!-- Datepicker css and jquery -->
+    <link rel="stylesheet" type="text/css" href="css/datepicker.css">
+    <script type="text/javascript" src="bootstrap-fulldatepicker.js"></script>
+    <script>
+$(document).on('focus', '.fulldatepicker', function (e) {
+    $(this).datepicker({
+      format: 'dd/mm/yy'
+    });
+  });
+
+  $(document).on('focus', '.yearpicker', function (e) {
+    $(this).datepicker({
+      format: 'yyyy',
+      startDate: '01.01.2012',
+      viewMode: 'years',
+      minViewMode: 'years'
+    });
+  });
+</script>
+
     <style type="text/css"> 
+
+      /* datepicker styling */
+      .dropdown-menu{
+/* used for styling this example */
+max-width: 224px;
+}
+input{
+/* used for styling this example */
+height:auto !important;
+} 
+ 
+#datepicker-extra
+{
+/* dateicker custom title style */
+background: #CEE1F7;
+padding: 5px 0px 4px;
+cursor:pointer;
+}
+.datepickering{
+/* dateicker custom title style */
+color: #0070FF;
+cursor: pointer;
+font-size: 13px;
+}
+
 
       /* Large desktop */
       @media (min-width: 980px) {
@@ -418,6 +464,21 @@ padding:0;
 		    <div class="span12">
 		    Select a date and time for your to-torial.
 		    </div>
+		    <!-- Year picker -->
+		    <div class="span12">
+		      <div class="span6">
+			<input type="text" class="input-medium yearpicker" placeholder="Pick Year">
+			</div>
+		      <div class="span6">
+			<div class="input-append date" id="dp3" data-date="12-02-2012" data-date-format="dd-mm-yyyy">
+  <input class="input-medium" size="16" type="text" value="12-02-2012">
+  <span class="add-on"><i class="icon-th"></i></span>
+</div>
+			</div>
+		      </div>
+
+		    
+		    
 		    <!-- AddThis Button BEGIN -->
 		    <div class="row-fluid">
 		      <div class="span6 offset4 actionsBtn">
