updated FAQ and added video

--- a/test.html
+++ b/test.html
@@ -348,7 +348,7 @@ padding:0;
       <div class="container">
       <div class="row-fluid heading">
 	<div class="span12">
-	  <h1>Welcome to <a href="http://imgur.com/xIGBU6v"><img src="http://i.imgur.com/xIGBU6v.png?1" title="Hosted by imgur.com" center center /></a></h1>
+	  <h1>Welcome to <img src="http://i.imgur.com/xIGBU6v.png?1" title="unpind" center center /></h1>
 	  </div>
 	</div>
 	<div class="row-fluid subheading">
@@ -363,7 +363,7 @@ padding:0;
 	<div class="row-fluid pitch no-space">
 	  <div class="span7 offset1">
 	    <div class="video">
-	    <img class="img-polaroid" src="http://placehold.it/600x400">
+	    <iframe width="640" height="480" src="//www.youtube.com/embed/UdXI7g2hUwo" frameborder="0" allowfullscreen></iframe>
 	    </div>
 
 
@@ -566,20 +566,20 @@ padding:0;
        <div class="container-fluid">
 	 <div class="span6">
 	    <div class="asset">
-            <img class="img-polaroid" src="http://placehold.it/600x200">
+            <img class="img-polaroid" src="http://i.imgur.com/RpLolbg.png?1">
             </div>
 
             <div class="asset">
-              <img class="img-polaroid" src="http://placehold.it/600x200">
+              <img class="img-polaroid" src="http://i.imgur.com/Ow6e4ac.png">
               </div> -
 	   </div>
 	 <div class="span6">
 	  <div class="asset">
-            <img class="img-polaroid" src="http://placehold.it/600x200">
+            <img class="img-polaroid" src="http://i.imgur.com/gEKKuFr.png">
             </div>
 
             <div class="asset">
-              <img class="img-polaroid" src="http://placehold.it/600x200">
+              <img class="img-polaroid" src="http://i.imgur.com/KJ2WHR4.png">
               </div>   
 	 </div>
 
@@ -594,25 +594,25 @@ padding:0;
 	      <div class="accordion-heading">
 		<a class="accordion-toggle" data-toggle="collapse"
 		   data-parent="#accordion2" href="#collapseOne">
-		  Where will the business be based out of?
+		  When will the site launch?
 		  </a>
 		</div>
 	      <div id="collapseOne" class="accordion-body collapse">
 		<div class="accordion-inner">
-		  Even though we're currently living in Sydney, the business will be incorporated in the US and eventually headquartered in whatever city we move back to.
+		  We are in the process of building the site and network.  With your feedback and support we will launch shortly.  
 		  </div>
 		</div>
 	      </div>
 	      <div class="accordion-group">
 		<div class="accordion-heading">
 		  <a class="accordion-toggle" data-togggle="collapse"
-		     data-parent="#accordion2" href="#collapseTwo">
-		    What's a Frequently Asked Question?
+		     data-parent="#accordion2" href="#collapseOne">
+		    Want to get in touch?
 		    </a>
 		  </div>
 	      <div id="collapseOne" class="accordion-body collapse">
 		<div class="accordion-inner">
-		  A question which is commonly asked by users.
+		  We'd love to hear from you!  Email us: kim at unpind.com.  
 	    </div>
 	</div>
 	</div>
